--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "wallstreetio/ontraport": "1.*",
-        "illuminate/support": "^5.1"
+        "illuminate/support": "5.1.*",
+        "doctrine/inflector": "1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
