--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "wallstreetio/ontraport": "^1.0",
-        "illuminate/support": "^5.1",
-        "doctrine/inflector": "1.0"
+        "illuminate/support": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
